--- a/main.tex
+++ b/main.tex
@@ -293,7 +293,7 @@ trials. Contrary to Block 1 the interval length was not fixed, but for
 each trial drawn from three conditions: short (1.7 seconds), standard
 (1.8 seconds) and long (1.9 seconds) (see \Cref{fig:task}).
 
-\subsubsection{BCI}
+\subsubsection{Brain Computer Interface}
 A brain computer interface (BCI) setup was used to facilitate an
 optimal distribution of length conditions according to the average
 beta power during the first second of the interval. More specifically,
@@ -362,12 +362,12 @@ reaction times in the short condition were on average 25.9 ms slower
 ($t(9480) = 16.93$, $p < .001$), these results are in line with first
 hypothesis (\Cref{fig:rt_by_length}).
 
-However, neither beta as main effect, $t(9480) = -0.493$, $p = 0.622$,
+However, neither beta as main effect ($t(9480) = -0.493$, $p = 0.622$)
 nor the interaction between beta and length condition were found to
-have a significant effect on reaction time, $t(9480) = 0.658$, $p =
-0.51$ for beta on short compared to medium condition, $t(9480) =
+have a significant effect on reaction time ($t(9480) = 0.658$, $p =
+0.51$ for beta on short compared to medium condition; $t(9480) =
 -0.641$, $p = 0.52$ for beta on long compared to medium
-condition. Thus no evidence was found to support our second hypothesis
+condition). Thus no evidence was found to support our second hypothesis
 (\Cref{fig:rt_by_beta}).
 
 \begin{figure}[!h]
